include/slvs.h

typedef unsigned __int32 uint32_t;
typedef uint32_t Slvs_hParam;
typedef uint32_t Slvs_hEntity;
typedef uint32_t Slvs_hConstraint;
typedef uint32_t Slvs_hGroup;
#define SLVS_E_POINT_IN_3D          50000
#define SLVS_E_POINT_IN_2D          50001
#define SLVS_E_NORMAL_IN_3D         60000
#define SLVS_E_NORMAL_IN_2D         60001
#define SLVS_E_DISTANCE             70000
/* The special point, normal, and distance types used for parametric step
 * and repeat, extrude, and assembly are currently not exposed. Please
 * contact us if you are interested in using these. */

#define SLVS_E_WORKPLANE            80000
#define SLVS_E_LINE_SEGMENT         80001
#define SLVS_E_CUBIC                80002
#define SLVS_E_CIRCLE               80003
#define SLVS_E_ARC_OF_CIRCLE        80004
typedef struct {
    Slvs_hEntity    h;
    Slvs_hGroup     group;

    int             type;

    Slvs_hEntity    wrkpl;
    Slvs_hEntity    point[4];
    Slvs_hEntity    normal;
    Slvs_hEntity    distance;

    Slvs_hParam     param[4];
} Slvs_Entity;
#define SLVS_C_POINTS_COINCIDENT        100000
#define SLVS_C_PT_PT_DISTANCE           100001
#define SLVS_C_PT_PLANE_DISTANCE        100002
#define SLVS_C_PT_LINE_DISTANCE         100003
#define SLVS_C_PT_FACE_DISTANCE         100004
#define SLVS_C_PT_IN_PLANE              100005
#define SLVS_C_PT_ON_LINE               100006
#define SLVS_C_PT_ON_FACE               100007
#define SLVS_C_EQUAL_LENGTH_LINES       100008
#define SLVS_C_LENGTH_RATIO             100009
#define SLVS_C_EQ_LEN_PT_LINE_D         100010
#define SLVS_C_EQ_PT_LN_DISTANCES       100011
#define SLVS_C_EQUAL_ANGLE              100012
#define SLVS_C_EQUAL_LINE_ARC_LEN       100013
#define SLVS_C_SYMMETRIC                100014
#define SLVS_C_SYMMETRIC_HORIZ          100015
#define SLVS_C_SYMMETRIC_VERT           100016
#define SLVS_C_SYMMETRIC_LINE           100017
#define SLVS_C_AT_MIDPOINT              100018
#define SLVS_C_HORIZONTAL               100019
#define SLVS_C_VERTICAL                 100020
#define SLVS_C_DIAMETER                 100021
#define SLVS_C_PT_ON_CIRCLE             100022
#define SLVS_C_SAME_ORIENTATION         100023
#define SLVS_C_ANGLE                    100024
#define SLVS_C_PARALLEL                 100025
#define SLVS_C_PERPENDICULAR            100026
#define SLVS_C_ARC_LINE_TANGENT         100027
#define SLVS_C_CUBIC_LINE_TANGENT       100028
#define SLVS_C_EQUAL_RADIUS             100029
#define SLVS_C_PROJ_PT_DISTANCE         100030
#define SLVS_C_WHERE_DRAGGED            100031
#define SLVS_C_CURVE_CURVE_TANGENT      100032
#define SLVS_C_LENGTH_DIFFERENCE        100033
#define SLVS_C_ARC_ARC_LEN_RATIO        100034
#define SLVS_C_ARC_LINE_LEN_RATIO       100035
#define SLVS_C_ARC_ARC_DIFFERENCE       100036
#define SLVS_C_ARC_LINE_DIFFERENCE      100037
typedef struct {
    Slvs_hConstraint    h;
    Slvs_hGroup         group;

    int                 type;

    Slvs_hEntity        wrkpl;

    double              valA;
    Slvs_hEntity        ptA;
    Slvs_hEntity        ptB;
    Slvs_hEntity        entityA;
    Slvs_hEntity        entityB;
    Slvs_hEntity        entityC;
    Slvs_hEntity        entityD;

    int                 other;
    int                 other2;
} Slvs_Constraint;
typedef struct {
    int                 result;
    int                 dof;
    int                 nbad;
} Slvs_SolveResult;
/* Our base coordinate system has basis vectors
 *     (1, 0, 0)  (0, 1, 0)  (0, 0, 1)
 * A unit quaternion defines a rotation to a new coordinate system with
 * basis vectors
 *         U          V          N
 * which these functions compute from the quaternion. */
DLL void Slvs_QuaternionU(double qw, double qx, double qy, double qz,
                             double *x, double *y, double *z);
DLL void Slvs_QuaternionV(double qw, double qx, double qy, double qz,
                             double *x, double *y, double *z);
DLL void Slvs_QuaternionN(double qw, double qx, double qy, double qz,
                             double *x, double *y, double *z);
/* Similarly, compute a unit quaternion in terms of two basis vectors. */
DLL void Slvs_MakeQuaternion(double ux, double uy, double uz,
                             double vx, double vy, double vz,
                             double *qw, double *qx, double *qy, double *qz);
/*
 * Multi-instance solver handles.
 *
 * Historically all sketch + system state (`Sketch SK`, `System SYS`, the
 * dragged-param set, the temporary mimalloc arena) lived in process-globals.
 * That's incompatible with running multiple independent solvers in one
 * process — the canonical pyactiongraphsim need is N `SolveSpaceEngine`
 * instances driving N independent simulation scenes, potentially on N
 * threads.
 *
 * `Slvs_Solver` is an opaque handle to a complete, independent solver
 * instance: its own sketch, its own system, its own dragged set, its own
 * scratch arena. Every `Slvs_*` data-mutating function takes a
 * `Slvs_Solver *` as its first argument — the API is fully explicit.
 *
 * Multi-thread: each solver is independent; running N solvers on N threads
 * has zero cross-talk. Single thread juggling two solvers: pass whichever
 * handle you mean on each call; the solver does not carry hidden state
 * between calls.
 *
 *   Slvs_Solver *a = Slvs_CreateSolver();
 *   Slvs_Solver *b = Slvs_CreateSolver();
 *   Slvs_Entity p_in_a = Slvs_AddPoint3D(a, 1, 0, 0, 0);
 *   Slvs_Entity p_in_b = Slvs_AddPoint3D(b, 1, 0, 0, 0);
 *   Slvs_SolveSketch(a, 1, NULL);
 *   Slvs_SolveSketch(b, 1, NULL);
 *   Slvs_DestroySolver(a);
 *   Slvs_DestroySolver(b);
 *
 * The four lifecycle functions below manage `Slvs_Solver *` handles.
 * `Slvs_SetCurrentSolver` / `Slvs_GetCurrentSolver` exist for testing and
 * for embedding scenarios where the caller wants to inspect/clear the
 * internal thread-local current pointer; normal callers do not need them.
 */
typedef struct Slvs_Solver Slvs_Solver;
DLL Slvs_Solver *Slvs_CreateSolver(void);
DLL void         Slvs_DestroySolver(Slvs_Solver *solver);
DLL Slvs_Entity Slvs_AddPoint2D(Slvs_Solver *solver, uint32_t grouph, double u, double v, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddPoint3D(Slvs_Solver *solver, uint32_t grouph, double x, double y, double z);
DLL Slvs_Entity Slvs_AddNormal2D(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddNormal3D(Slvs_Solver *solver, uint32_t grouph, double qw, double qx, double qy, double qz);
DLL Slvs_Entity Slvs_AddDistance(Slvs_Solver *solver, uint32_t grouph, double value, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddLine2D(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddLine3D(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB);
DLL Slvs_Entity Slvs_AddCubic(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB, Slvs_Entity ptC, Slvs_Entity ptD, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddArc(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity normal, Slvs_Entity center, Slvs_Entity start, Slvs_Entity end, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddCircle(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity normal, Slvs_Entity center, Slvs_Entity radius, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddWorkplane(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity origin, Slvs_Entity nm);
DLL Slvs_Entity Slvs_AddBase2D(Slvs_Solver *solver, uint32_t grouph);
DLL Slvs_Constraint Slvs_AddConstraint(Slvs_Solver *solver, uint32_t grouph, int type, Slvs_Entity workplane, double val, Slvs_Entity ptA,
    Slvs_Entity ptB, Slvs_Entity entityA,
    Slvs_Entity entityB, Slvs_Entity entityC,
    Slvs_Entity entityD, int other, int other2);
DLL Slvs_Constraint Slvs_Coincident(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Distance(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Equal(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_EqualAngle(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB, Slvs_Entity entityC,
                                    Slvs_Entity entityD,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_EqualPointToLine(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity entityC, Slvs_Entity entityD,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Ratio(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Symmetric(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity entityC  ,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_SymmetricH(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_SymmetricV(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Midpoint(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Horizontal(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity workplane,
                                    Slvs_Entity entityB);
DLL Slvs_Constraint Slvs_Vertical(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity workplane,
                                    Slvs_Entity entityB);
DLL Slvs_Constraint Slvs_Diameter(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, double value);
DLL Slvs_Constraint Slvs_SameOrientation(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB);
DLL Slvs_Constraint Slvs_Angle(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value,
                                    Slvs_Entity workplane,
                                    int inverse);
DLL Slvs_Constraint Slvs_Perpendicular(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity workplane,
                                    int inverse);
DLL Slvs_Constraint Slvs_Parallel(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Tangent(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_DistanceProj(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB, double value);
DLL Slvs_Constraint Slvs_LengthDiff(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Dragged(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity workplane);
DLL double Slvs_GetParamValue(Slvs_Solver *solver, uint32_t ph);
DLL void Slvs_SetParamValue(Slvs_Solver *solver, uint32_t ph, double value);
DLL double Slvs_GetConstraintValue(Slvs_Solver *solver, uint32_t ch);
DLL void Slvs_SetConstraintValue(Slvs_Solver *solver, uint32_t ch, double value);
DLL uint32_t Slvs_GetConstraintGroup(Slvs_Solver *solver, uint32_t ch);
DLL void Slvs_SetConstraintGroup(Slvs_Solver *solver, uint32_t ch, uint32_t new_group);
DLL void Slvs_MarkDragged(Slvs_Solver *solver, Slvs_Entity ptA);
/**
 * Setting `bad` to a non NULL pointer enables finding of bad constraints.
 * If such constraints are found, `bad` is set to a heap allocated array containing
 * the handles of those constraints, while the `nbad` member of the returned
 * `Slvs_SolveResult` struct is set to the number of the bad constraints.
 * NOTE: the user is responsible for freeing the heap allocated memory using `free()`.
 */
DLL Slvs_SolveResult Slvs_SolveSketch(Slvs_Solver *solver, uint32_t hg, Slvs_hConstraint **bad);
DLL void Slvs_ClearSketch(Slvs_Solver *solver);