src/slvs/lib.pyx

#cython: language_level=3
from enum import IntEnum, auto
from libc.stdint cimport uint32_t
from libc.stdlib cimport free

cdef extern from "slvs.h" nogil:
    ctypedef uint32_t Slvs_hEntity
    ctypedef uint32_t Slvs_hGroup
    ctypedef uint32_t Slvs_hConstraint
    ctypedef uint32_t Slvs_hParam

    ctypedef struct Slvs_Entity:
        Slvs_hEntity h
        Slvs_hGroup group
        int type
        Slvs_hEntity wrkpl
        Slvs_hEntity point[4]
        Slvs_hEntity normal
        Slvs_hEntity distance
        Slvs_hParam param[4]

    ctypedef struct Slvs_Constraint:
        Slvs_hConstraint h
        Slvs_hGroup group
        int type
        Slvs_hEntity wrkpl
        double valA
        Slvs_hEntity ptA
        Slvs_hEntity ptB
        Slvs_hEntity entityA
        Slvs_hEntity entityB
        Slvs_hEntity entityC
        Slvs_hEntity entityD
        int other
        int other2

    ctypedef struct Slvs_SolveResult:
        int result
        int dof
        int nbad

    # Pure-math helpers — no Solver state involved.
    void Slvs_QuaternionU(double qw, double qx, double qy, double qz,
                             double *x, double *y, double *z)
    void Slvs_QuaternionV(double qw, double qx, double qy, double qz,
                             double *x, double *y, double *z)
    void Slvs_QuaternionN(double qw, double qx, double qy, double qz,
                             double *x, double *y, double *z)
    void Slvs_MakeQuaternion(double ux, double uy, double uz,
                             double vx, double vy, double vz,
                             double *qw, double *qx, double *qy, double *qz)

    # Multi-instance solver handle (opaque). Every data-mutating Slvs_*
    # function takes a `Slvs_Solver *` as its first argument.
    ctypedef struct Slvs_Solver:
        pass
    Slvs_Solver *Slvs_CreateSolver()
    void         Slvs_DestroySolver(Slvs_Solver *solver)

    Slvs_Entity Slvs_AddPoint2D(Slvs_Solver *solver, Slvs_hGroup grouph, double u, double v, Slvs_Entity workplane)
    Slvs_Entity Slvs_AddPoint3D(Slvs_Solver *solver, Slvs_hGroup grouph, double x, double y, double z)
    Slvs_Entity Slvs_AddNormal2D(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity workplane)
    Slvs_Entity Slvs_AddNormal3D(Slvs_Solver *solver, Slvs_hGroup grouph, double qw, double qx, double qy, double qz)
    Slvs_Entity Slvs_AddDistance(Slvs_Solver *solver, Slvs_hGroup grouph, double value, Slvs_Entity workplane)
    Slvs_Entity Slvs_AddLine2D(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity ptA, Slvs_Entity ptB, Slvs_Entity workplane)
    Slvs_Entity Slvs_AddLine3D(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity ptA, Slvs_Entity ptB)
    Slvs_Entity Slvs_AddCubic(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity ptA, Slvs_Entity ptB, Slvs_Entity ptC, Slvs_Entity ptD, Slvs_Entity workplane)
    Slvs_Entity Slvs_AddArc(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity normal, Slvs_Entity center, Slvs_Entity start, Slvs_Entity end, Slvs_Entity workplane)
    Slvs_Entity Slvs_AddCircle(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity normal, Slvs_Entity center, Slvs_Entity radius, Slvs_Entity workplane)
    Slvs_Entity Slvs_AddWorkplane(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity origin, Slvs_Entity nm)
    Slvs_Entity Slvs_AddBase2D(Slvs_Solver *solver, Slvs_hGroup grouph)

    Slvs_Constraint Slvs_AddConstraint(Slvs_Solver *solver, Slvs_hGroup grouph, int type, Slvs_Entity workplane, double val, Slvs_Entity ptA, Slvs_Entity ptB, Slvs_Entity entityA, Slvs_Entity entityB, Slvs_Entity entityC, Slvs_Entity entityD, int other, int other2)
    Slvs_Constraint Slvs_Coincident(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, Slvs_Entity workplane)
    Slvs_Constraint Slvs_Distance(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value, Slvs_Entity workplane)
    Slvs_Constraint Slvs_Equal(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, Slvs_Entity workplane)
    Slvs_Constraint Slvs_EqualAngle(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, Slvs_Entity entityC, Slvs_Entity entityD, Slvs_Entity workplane)
    Slvs_Constraint Slvs_EqualPointToLine(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, Slvs_Entity entityC, Slvs_Entity entityD, Slvs_Entity workplane)
    Slvs_Constraint Slvs_Ratio(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value, Slvs_Entity workplane)
    Slvs_Constraint Slvs_Symmetric(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, Slvs_Entity entityC, Slvs_Entity workplane)
    Slvs_Constraint Slvs_SymmetricH(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity ptA, Slvs_Entity ptB, Slvs_Entity workplane)
    Slvs_Constraint Slvs_SymmetricV(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity ptA, Slvs_Entity ptB, Slvs_Entity workplane)
    Slvs_Constraint Slvs_Midpoint(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity ptA, Slvs_Entity ptB, Slvs_Entity workplane)
    Slvs_Constraint Slvs_Horizontal(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity workplane, Slvs_Entity entityB)
    Slvs_Constraint Slvs_Vertical(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity workplane, Slvs_Entity entityB)
    Slvs_Constraint Slvs_Diameter(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, double value)
    Slvs_Constraint Slvs_SameOrientation(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB)
    Slvs_Constraint Slvs_Angle(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value, Slvs_Entity workplane, int inverse)
    Slvs_Constraint Slvs_Perpendicular(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, Slvs_Entity workplane, int inverse)
    Slvs_Constraint Slvs_Parallel(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, Slvs_Entity workplane)
    Slvs_Constraint Slvs_Tangent(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, Slvs_Entity workplane)
    Slvs_Constraint Slvs_DistanceProj(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity ptA, Slvs_Entity ptB, double value)
    Slvs_Constraint Slvs_LengthDiff(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value, Slvs_Entity workplane)
    Slvs_Constraint Slvs_Dragged(Slvs_Solver *solver, Slvs_hGroup grouph, Slvs_Entity ptA, Slvs_Entity workplane)

    void Slvs_MarkDragged(Slvs_Solver *solver, Slvs_Entity ptA)
    Slvs_SolveResult Slvs_SolveSketch(Slvs_Solver *solver, Slvs_hGroup hg, Slvs_hConstraint **bad) nogil
    double Slvs_GetParamValue(Slvs_Solver *solver, int ph)
    double Slvs_SetParamValue(Slvs_Solver *solver, int ph, double value)
    double Slvs_GetConstraintValue(Slvs_Solver *solver, int ch)
    void Slvs_SetConstraintValue(Slvs_Solver *solver, int ch, double value)
    uint32_t Slvs_GetConstraintGroup(Slvs_Solver *solver, uint32_t ch)
    void Slvs_SetConstraintGroup(Slvs_Solver *solver, uint32_t ch, uint32_t new_group)
    void Slvs_ClearSketch(Slvs_Solver *solver)

    cdef Slvs_Entity _E_NONE "SLVS_E_NONE"
    cdef Slvs_Entity _E_FREE_IN_3D "SLVS_E_FREE_IN_3D"

    cdef int _SLVS_C_POINTS_COINCIDENT "SLVS_C_POINTS_COINCIDENT"
    cdef int _SLVS_C_PT_PT_DISTANCE "SLVS_C_PT_PT_DISTANCE"
    cdef int _SLVS_C_PT_PLANE_DISTANCE "SLVS_C_PT_PLANE_DISTANCE"
    cdef int _SLVS_C_PT_LINE_DISTANCE "SLVS_C_PT_LINE_DISTANCE"
    cdef int _SLVS_C_PT_FACE_DISTANCE "SLVS_C_PT_FACE_DISTANCE"
    cdef int _SLVS_C_PT_IN_PLANE "SLVS_C_PT_IN_PLANE"
    cdef int _SLVS_C_PT_ON_LINE "SLVS_C_PT_ON_LINE"
    cdef int _SLVS_C_PT_ON_FACE "SLVS_C_PT_ON_FACE"
    cdef int _SLVS_C_EQUAL_LENGTH_LINES "SLVS_C_EQUAL_LENGTH_LINES"
    cdef int _SLVS_C_LENGTH_RATIO "SLVS_C_LENGTH_RATIO"
    cdef int _SLVS_C_EQ_LEN_PT_LINE_D "SLVS_C_EQ_LEN_PT_LINE_D"
    cdef int _SLVS_C_EQ_PT_LN_DISTANCES "SLVS_C_EQ_PT_LN_DISTANCES"
    cdef int _SLVS_C_EQUAL_ANGLE "SLVS_C_EQUAL_ANGLE"
    cdef int _SLVS_C_EQUAL_LINE_ARC_LEN "SLVS_C_EQUAL_LINE_ARC_LEN"
    cdef int _SLVS_C_SYMMETRIC "SLVS_C_SYMMETRIC"
    cdef int _SLVS_C_SYMMETRIC_HORIZ "SLVS_C_SYMMETRIC_HORIZ"
    cdef int _SLVS_C_SYMMETRIC_VERT "SLVS_C_SYMMETRIC_VERT"
    cdef int _SLVS_C_SYMMETRIC_LINE "SLVS_C_SYMMETRIC_LINE"
    cdef int _SLVS_C_AT_MIDPOINT "SLVS_C_AT_MIDPOINT"
    cdef int _SLVS_C_HORIZONTAL "SLVS_C_HORIZONTAL"
    cdef int _SLVS_C_VERTICAL "SLVS_C_VERTICAL"
    cdef int _SLVS_C_DIAMETER "SLVS_C_DIAMETER"
    cdef int _SLVS_C_PT_ON_CIRCLE "SLVS_C_PT_ON_CIRCLE"
    cdef int _SLVS_C_SAME_ORIENTATION "SLVS_C_SAME_ORIENTATION"
    cdef int _SLVS_C_ANGLE "SLVS_C_ANGLE"
    cdef int _SLVS_C_PARALLEL "SLVS_C_PARALLEL"
    cdef int _SLVS_C_PERPENDICULAR "SLVS_C_PERPENDICULAR"
    cdef int _SLVS_C_ARC_LINE_TANGENT "SLVS_C_ARC_LINE_TANGENT"
    cdef int _SLVS_C_CUBIC_LINE_TANGENT "SLVS_C_CUBIC_LINE_TANGENT"
    cdef int _SLVS_C_EQUAL_RADIUS "SLVS_C_EQUAL_RADIUS"
    cdef int _SLVS_C_PROJ_PT_DISTANCE "SLVS_C_PROJ_PT_DISTANCE"
    cdef int _SLVS_C_WHERE_DRAGGED "SLVS_C_WHERE_DRAGGED"
    cdef int _SLVS_C_CURVE_CURVE_TANGENT "SLVS_C_CURVE_CURVE_TANGENT"
    cdef int _SLVS_C_LENGTH_DIFFERENCE "SLVS_C_LENGTH_DIFFERENCE"
    cdef int _SLVS_C_ARC_ARC_LEN_RATIO "SLVS_C_ARC_ARC_LEN_RATIO"
    cdef int _SLVS_C_ARC_LINE_LEN_RATIO "SLVS_C_ARC_LINE_LEN_RATIO"
    cdef int _SLVS_C_ARC_ARC_DIFFERENCE "SLVS_C_ARC_ARC_DIFFERENCE"
    cdef int _SLVS_C_ARC_LINE_DIFFERENCE "SLVS_C_ARC_LINE_DIFFERENCE"

    cdef int _SLVS_E_POINT_IN_3D "SLVS_E_POINT_IN_3D"
    cdef int _SLVS_E_POINT_IN_2D "SLVS_E_POINT_IN_2D"
    cdef int _SLVS_E_NORMAL_IN_3D "SLVS_E_NORMAL_IN_3D"
    cdef int _SLVS_E_NORMAL_IN_2D "SLVS_E_NORMAL_IN_2D"
    cdef int _SLVS_E_DISTANCE "SLVS_E_DISTANCE"
    cdef int _SLVS_E_WORKPLANE "SLVS_E_WORKPLANE"
    cdef int _SLVS_E_LINE_SEGMENT "SLVS_E_LINE_SEGMENT"
    cdef int _SLVS_E_CUBIC "SLVS_E_CUBIC"
    cdef int _SLVS_E_CIRCLE "SLVS_E_CIRCLE"
    cdef int _SLVS_E_ARC_OF_CIRCLE "SLVS_E_ARC_OF_CIRCLE"

    cdef int _SLVS_RESULT_OKAY "SLVS_RESULT_OKAY"
    cdef int _SLVS_RESULT_INCONSISTENT "SLVS_RESULT_INCONSISTENT"
    cdef int _SLVS_RESULT_DIDNT_CONVERGE "SLVS_RESULT_DIDNT_CONVERGE"
    cdef int _SLVS_RESULT_TOO_MANY_UNKNOWNS "SLVS_RESULT_TOO_MANY_UNKNOWNS"
    cdef int _SLVS_RESULT_REDUNDANT_OKAY "SLVS_RESULT_REDUNDANT_OKAY"

E_NONE = _E_NONE
E_FREE_IN_3D = _E_FREE_IN_3D


# Pure-math helpers (no Solver state) stay module-level.
cpdef tuple quaternion_u(double qw, double qx, double qy, double qz):
    """Input quaternion, return unit vector of U axis."""
    cdef double x, y, z
    Slvs_QuaternionU(qw, qx, qy, qz, &x, &y, &z)
    return x, y, z


cpdef tuple quaternion_v(double qw, double qx, double qy, double qz):
    """Input quaternion, return unit vector of V axis."""
    cdef double x, y, z
    Slvs_QuaternionV(qw, qx, qy, qz, &x, &y, &z)
    return x, y, z


cpdef tuple quaternion_n(double qw, double qx, double qy, double qz):
    """Input quaternion, return unit vector of normal."""
    cdef double x, y, z
    Slvs_QuaternionN(qw, qx, qy, qz, &x, &y, &z)
    return x, y, z


cpdef tuple make_quaternion(double ux, double uy, double uz, double vx, double vy, double vz):
    """Input two unit vectors, return quaternion."""
    cdef double qw, qx, qy, qz
    Slvs_MakeQuaternion(ux, uy, uz, vx, vy, vz, &qw, &qx, &qy, &qz)
    return qw, qx, qy, qz


# Enums.
class ResultFlag(IntEnum):
    """Symbol of the result flags."""
    OKAY = _SLVS_RESULT_OKAY
    INCONSISTENT = _SLVS_RESULT_INCONSISTENT
    DIDNT_CONVERGE = _SLVS_RESULT_DIDNT_CONVERGE
    TOO_MANY_UNKNOWNS = _SLVS_RESULT_TOO_MANY_UNKNOWNS
    REDUNDANT_OKAY = _SLVS_RESULT_REDUNDANT_OKAY

